<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/sylveryte">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btname"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onShowButtonClicked"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt2name"
        android:id="@+id/button2"
        android:layout_above="@+id/imageView"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:onClick="onShowImageButtonClicked"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="352dp"
        android:id="@+id/imageView"
        android:layout_gravity="right|top"
        android:src="@drawable/red"
        android:visibility="invisible"
        android:contentDescription="@string/Redname"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="matrix"
        android:background="#ff51ff1e"
        android:cropToPadding="false" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        android:layout_below="@+id/imageView">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:id="@+id/textView2"
            android:visibility="invisible"
            android:layout_alignBottom="@+id/scrollView"
            android:layout_alignRight="@+id/button2"
            android:layout_alignEnd="@+id/button2"
            android:layout_marginBottom="82dp"
            android:textSize="20dp"
            android:editable="false"
            android:textColor="#ff001f0d"
            android:password="false"
            android:clickable="true" />
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btHide"
        android:id="@+id/button3"
        android:layout_above="@+id/imageView"
        android:layout_toRightOf="@+id/button2"
        android:onClick="onHideButtonClicked"
        android:layout_toEndOf="@+id/button2" />


</RelativeLayout>
